<resources>
    <string name="app_name">Hotel Chaldea</string>
    <string name="user">E-Mail</string>
    <string name="psw">Password</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Rin Hoshizora</string>
    <string name="nav_header_subtitle">Zura@Orenji.jp</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_ricarica">Ricarica</string>
    <string name="menu_acquista">Acquista</string>
    <string name="menu_platfond">Gestione Platfond</string>
    <string name="menu_storico">Storico</string>
    <string name="menu_profilo">Profilo</string>
    <string name="menu_esci">Esci</string>
</resources>
