<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@mipmap/euro"
                android:title="@string/menu_ricarica"/>
        <item
                android:id="@+id/nav_gallery"
                android:icon="@mipmap/pagah"
                android:title="@string/menu_acquista"/>
        <item
                android:id="@+id/nav_slideshow"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_platfond"/>
        <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_storico"/>
        <item
                android:id="@+id/nav_send"
                android:icon="@mipmap/logout"
                android:title="@string/menu_esci"/>
    </group>



</menu>
